Home Page Stylesheet

--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
 
 	<section class="featured">
 		<div class="container">
-			<h2>featured Products</h2>
+			<h2>Featured Products</h2>
 			<div class="products-grid" id="featured-products">
 				<!-- Products will come from JavaScript -->
 			</div>
@@ -42,6 +42,5 @@
 	</footer>
 
 	<script src="script.js">Script</script>
-	
 </body>
 </html>
