Lesson 6 - Footer.css

--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
 	</section>
 
 	<footer class="footer">
-		<p>&copy; 2024 TechVibe. All rights reserved. Created by _thabi.</p>
+		<p><strong>&copy; 2024 TechVibe.</strong> All rights reserved. Created by _thabi.</p>
 	</footer>
 
 	<script src="script.js">Script</script>
