--- a/Products.html
+++ b/Products.html
@@ -21,7 +21,7 @@
 		</div>
 	</nav>
 
-    <main class="main-container">
+    <main class="main-content">
         <div class="container">
             <button class="filter-btn active" data-category="all">All Products</button>
             <button class="filter-btn" data-category="phones">All Phones</button>
